Name:           openjdb
Version:        0.0.1
Description:    Java debugger which works over JDWP.
Synopsis:       Java debugger which works over JDWP.
Copyright:	2012 Victor Denisov
License:        GPL-2
License-file:   LICENSE
Author:	        Victor Denisov <denisovenator@gmail.com>
Maintainer:     Victor Denisov <denisovenator@gmail.com>
Build-type:     Simple
Homepage:       https://github.com/VictorDenisov/suffixarray
Category:       Data
Cabal-version:  >=1.4

Executable openjdb
        main-is:        Main.hs
        build-depends:  base >= 3 && <= 4.5.0.0
                     ,  jdi >= 0.0.4
                     ,  binary >= 0.5.1.0
                     ,  bytestring >= 0.9.2.1
                     ,  mtl >= 2.1.2
                     ,  network >= 2.3.0.14
                     ,  haskeline >= 0.7.0.2
                     ,  transformers >= 0.3.0.0
                     ,  parsec >= 3.1.3
                     ,  jarfind >= 0.1.0.3
                     ,  language-java >= 0.2.1
                     ,  vim-netbeans >= 0.1.4
        extensions:     StandaloneDeriving
